---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@main {
.b0_:
  c1_: int = const 2;
  v2_: ptr<int> = alloc c1_;
  c3_: int = const 1;
  v4_: ptr<int> = ptradd v2_ c3_;
  c5_: int = const 20;
  c6_: int = const 10;
  store v2_ c6_;
  store v4_ c5_;
  v7_: int = load v2_;
  print v7_;
  free v2_;
  ret;
}
